--- a/master/WebApplicationUI/unit/addunit.html
+++ b/master/WebApplicationUI/unit/addunit.html
@@ -265,17 +265,24 @@
                                         <div class="form-group row">
                                             <label class="col-md-3 form-control-label" for="text-input">Unit Name</label>
                                             <div class="col-md-9" ng-class="{ 'has-error': form.name.$dirty && form.name.$error.required &&!form.name.$pristine }">
-                                                <input type="text" name="name" id="name" class="form-control" placeholder="Unit name" ng-model="topics.name" ng-minlength="3" ng-maxlength="15" ng-pattern="/^(\D)+$/" required />
+                                                <input type="text" name="name" id="name" class="form-control" placeholder="Unit name" ng-model="topics.name" ng-minlength="3" ng-maxlength="15" required />
                                                 <p ng-show="form.name.$error.minlength" class="help-block">Unit name is too short.</p>
                                                 <p ng-show="form.name.$error.maxlength" class="help-block">Unit name is too long.</p>
                                                 <span ng-show="form.name.$dirty && form.name.$error.required" class="help-block">Unit name is required</span>
                                             </div>
                                         </div>
                                         <div class="form-group row">
-                                            <label class="col-md-3 form-control-label" for="text-input">Difficulty Level</label>
-                                            <div class="col-md-9" ng-class="{ 'has-error': form.difLevel.$dirty && form.difLevel.$error.required }">
-                                                <input type="text" name="difLevel" id="difLevel" class="form-control" placeholder="Difficulty" ng-model="topics.difLevel" required />
-                                                <span ng-show="form.difLevel.$dirty && form.difLevel.$error.required" class="help-block">Difficulty level is required</span>
+                                            <label class="col-md-3 form-control-label">Difficulty Level</label>
+                                            <div class="col-md-9">
+                                                <label class="radio-inline" for="inline-radio1">
+                                                    <input type="radio" name="difLevel" ng-model="game.difLevel" value="easy"> Easy
+                                                </label>
+                                                <label class="radio-inline" for="inline-radio2">
+                                                    <input type="radio" name="difLevel" ng-model="game.difLevel" value="medium"> Medium
+                                                </label>
+                                                <label class="radio-inline" for="inline-radio3">
+                                                    <input type="radio" name="difLevel" ng-model="game.difLevel" value="hard"> Hard
+                                                </label>
                                             </div>
                                         </div>
                                         <div class="form-group row">
